--- a/style.css
+++ b/style.css
@@ -108,6 +108,24 @@ body {
   border: 2px solid white;
 }
 
+.button2{
+  margin-top: 30px;
+  width: 170px;
+  height: 50px;
+  cursor: pointer;
+  background-color: black;
+  color: white;
+  font-size: 14pt;
+  border-radius: 20px;
+  border: 2px solid white;
+}
+
+.modeSelection
+{
+  display: flex;
+  flex-direction: column;
+}
+
 .gametitle{
   font-size: 30pt;
 }
@@ -130,6 +148,14 @@ body {
 .playerO{
   color: white;
   text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #ff00ff, 0 0 20px #ff00ff, 0 0 30px #ff00ff;
+}
+
+.tie{
+  text-align: center;
+  color: white;
+  font-size: 22pt;
+  color: white;
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0073e6, 0 0 20px #0073e6, 0 0 30px #0073e6;
 }
 
 .score{
@@ -165,6 +191,17 @@ body {
 .clear{
   box-shadow: 0 0 25px 5px #00ff00;
   text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #00ff00, 0 0 20px #00ff00, 0 0 30px #00ff00;
+}
+
+.selectMode{
+  box-shadow: 0 0 25px 5px #0073e6;
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0073e6, 0 0 20px #0073e6, 0 0 30px #0073e6;
+}
+
+.buttonContainer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #box1{
