--- a/style.css
+++ b/style.css
@@ -29,12 +29,23 @@
   border: solid 2px white;
 }
 
+.popup2{
+  height: 450px;
+}
+
 .popuptext{
   color: white;
   text-align: center;
   text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #00ff00, 0 0 20px #00ff00, 0 0 30px #00ff00;
   font-size: 20pt;
   width: 80%;
+}
+
+.popuptext2{
+  font-size: 26pt;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0073e6, 0 0 20px #0073e6, 0 0 30px #0073e6;
 }
 
 .btnok{
@@ -49,6 +60,7 @@
   border: 2px solid white;
   text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #ff00ff, 0 0 20px #ff00ff, 0 0 30px #ff00ff;
   box-shadow: 0 0 25px 5px #ff00ff;
+  cursor: pointer;
 }
 
 .hidden{
@@ -108,6 +120,19 @@ body {
   border: 2px solid white;
 }
 
+.settingsButton{
+  background-color: black;
+  color: white;
+  font-size: 14pt;
+  border-radius: 10px;
+  border: 2px solid white;
+  width: 50px;
+  height: 50px;
+  margin-top: 20px;
+  margin-left:20px;
+  cursor: pointer;
+}
+
 .button2{
   margin-top: 30px;
   width: 170px;
@@ -128,6 +153,7 @@ body {
 
 .gametitle{
   font-size: 30pt;
+  margin-top: 10px;
 }
 
 .green{
@@ -160,7 +186,8 @@ body {
 
 .score{
   color: white;
-  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0073e6, 0 0 20px #0073e6, 0 0 25px #0073e6, 0 0 30px #0073e6, 0 0 35px #0073e6;
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0073e6, 0 0 20px #0073e6, 0 0 30px #0073e6;
+
 }
 
 #tic{
